# Checking-parsers

./: .gitignore  cam_pdf.py  ex_2.py  ex_3.py  ex_4.py  example.py  example_model.py  extractor.py  output.py  pdf_rg.py  pyproject.toml  tika_pdf_rg.py
