[project]
name = "r-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "camelot-py[cv]>=2.0.0",
    "dotenv>=0.9.9",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.27.2.3",
    "textract>=2.0.0",
    "tika>=3.1.0",
    "tiktoken>=0.13.0",
    "trustcall>=0.0.39",
]
